--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.36
 tenacity==8.5.0
 threadpoolctl==3.5.0
-tiktoken==0.8.0
+tiktoken>=0.7.0,<0.8.0
 tqdm==4.66.6
 typing_extensions==4.12.2
 urllib3==2.2.3
